feat(memory): added rag based memory

--- a/.env_sample
+++ b/.env_sample
@@ -2,3 +2,7 @@ ANTHROPIC_API_KEY=
 OPENAI_API_KEY=
 VOYAGE_API_KEY=
 GROQ_API_KEY=
+VOYAGE_API_KEY=
+PINECONE_API_KEY=
+PINECONE_DIMENSION=
+PINECONE_INDEX_NAME=
