fix(speech): pytorch support for kokoro

--- a/baby-tau/requirements.txt
+++ b/baby-tau/requirements.txt
@@ -15,3 +15,9 @@ sounddevice
 #kokoro-onnx deps: rfc3986, pylatexenc, language-tags, dlinfo, uritemplate, threadpoolctl, tabulate, soxr, six, scipy, rpds-py, regex, pyparsing, pycparser, platformdirs, msgpack, markdown, lxml, llvmlite, lazy-loader, joblib, isodate, espeakng-loader, decorator, colorlog, colorama, bibtexparser, babel, audioread, attrs, scikit-learn, referencing, rdflib, python-dateutil, pooch, onnxruntime, numba, cffi, soundfile, jsonschema-specifications, clldutils, librosa, jsonschema, csvw, segments, phonemizer-fork, kokoro-onnx
 kokoro-onnx
 ## remove onnxruntime and reinstall from wheel after
+
+# For kokoro torch
+munch
+transformers
+phonemizer
+iPython
