fix(baby-tau): cpu maxed out, chunk window for whisper

--- a/baby-tau/.env_example
+++ b/baby-tau/.env_example
@@ -26,6 +26,8 @@ HF_TOKEN=
 VLLM_GPU_MEMORY_UTILIZATION=0.50
 
 TTS_VOICE=af_alloy
+# Add VAD_EVERY_N_CHUNKS to control how often VAD is processed
+VAD_EVERY_N_CHUNKS=6
 
 # --- Optional: Specify devices ---
 # Set specific GPU if needed, otherwise 'all' is fine for single GPU Jetson
