--- a/baby-tau/jetson/requirements.txt
+++ b/baby-tau/jetson/requirements.txt
@@ -5,6 +5,7 @@ openai
 scipy
 playsound
 python-dotenv
+silero-vad
 # --- IMPORTANT NOTE for Jetson Users ---
 # The following libraries often require specific versions or builds for NVIDIA Jetson (ARM64).
 # It is strongly recommended to install PyTorch and Torchaudio following NVIDIA's official documentation
