feat(baby-tau): change to ollama

--- a/baby-tau/.env_example
+++ b/baby-tau/.env_example
@@ -22,6 +22,9 @@ PYTHON_TAG=sound-utils:r36.4.3-cu1280
 #VLLM_MODEL=google/gemma-3-1b-it
 #VLLM_MODEL=mistralai/Mistral-Small-3.1-24B-Instruct-2503
 VLLM_MODEL=ibm-granite/granite-3.1-8b-instruct
+OLLAMA_MODEL=llama-3.2:1b
+#OLLAMA_MODEL=llama-3.2:3b
+
 # Hugging Face Hub Token (required for gated models like Gemma, Llama)
 # Replace with your actual token: https://huggingface.co/settings/tokens
 HF_TOKEN=
