chore(baby-tau): ollama tag

--- a/baby-tau/.env_example
+++ b/baby-tau/.env_example
@@ -13,6 +13,8 @@ SPEACHES_TAG=dustynv/speaches:r36.4.0-cu128-24.04
 #SPEACHES_TAG=speaches-test:r36.4.3
 KOKORO_TTS_TAG=dustynv/kokoro-tts:fastapi-r36.4.0-cu128-24.04
 VLLM_TAG=dustynv/vllm:0.7.4-r36.4.0-cu128-24.04
+OLLAMA_TAG=dustynv/ollama:r36.4.0
+
 # Assuming 'python-3.12:r36.4.3' is an image you have built or pulled from the jetson-containers setup
 #PYTHON_IMAGE=torchaudio:2.6.0-r36.4.0-cu128-24.04
 #PYTHON_TAG=silerovad:r36.4.3
