fix(baby-tau): ollama port

--- a/baby-tau/docker-compose.yaml
+++ b/baby-tau/docker-compose.yaml
@@ -31,8 +31,7 @@ services:
     environment:
       - NVIDIA_VISIBLE_DEVICES=${NVIDIA_VISIBLE_DEVICES:-all}
       - NVIDIA_DRIVER_CAPABILITIES=all
-      - OLLAMA_HOST=0.0.0.0
-      - OLLAMA_PORT=${VLLM_PORT:-8000}
+      - OLLAMA_HOST=0.0.0.0:${VLLM_PORT:-8000}
       - OLLAMA_MODELS=${OLLAMA_MODEL:-mistral}
     volumes:
       - ./ollama:/root/.ollama
