--- a/gemma-transformers/docker-compose.yaml
+++ b/gemma-transformers/docker-compose.yaml
@@ -8,6 +8,16 @@ x-shared-properties: &shared-properties
     - /dev/bus/usb                # USB devices (if needed)
 
 name: gemma3n-transformers
+
+# Define named volumes for persistent storage
+volumes:
+  huggingface-cache:
+    name: gemma3n-hf-cache
+    driver: local
+  model-data:
+    name: gemma3n-model-data
+    driver: local
+
 services:
   gemma3n-api:
     build:
@@ -28,16 +38,19 @@ services:
       - NVIDIA_DRIVER_CAPABILITIES=all
       # Hugging Face token for gated models (if needed)
       - HUGGING_FACE_HUB_TOKEN=${HF_TOKEN}
+      - HF_TOKEN=${HF_TOKEN}
       # Performance settings
       - CUDA_VISIBLE_DEVICES=0
       - PYTORCH_CUDA_ALLOC_CONF=max_split_size_mb:512
+      # Cache settings
+      - HF_HOME=/cache/huggingface
+      - TRANSFORMERS_CACHE=/cache/huggingface
     volumes:
-      # Mount model cache directory to avoid re-downloading
-      - ${MODEL_CACHE_DIR:-./models}:/root/.cache/huggingface
-      # Mount logs directory
+      # Use named volumes for persistent model storage
+      - huggingface-cache:/cache/huggingface
+      - model-data:/models
+      # Mount logs directory (local bind mount for easy access)
       - ./logs:/app/logs
-      # Mount the .env file if it exists
-      - ./.env:/app/.env:ro
     ports:
       - "${GEMMA3N_PORT:-8000}:${GEMMA3N_PORT:-8000}"
     healthcheck:
