--- a/gemma-transformers/requirements.txt
+++ b/gemma-transformers/requirements.txt
@@ -1,10 +1,11 @@
-fastapi==0.104.1
+#fastapi==0.104.1
+fastapi
 uvicorn[standard]==0.24.0
-transformers==4.44.2
-torch==2.1.0
-torchvision==0.16.0
+transformers==4.53.2
+torch==2.8.0
+torchvision==0.23.0
 pillow==10.1.0
 pydantic==2.5.0
 python-multipart==0.0.6
 accelerate==0.24.1
-huggingface-hub==0.23.2
+huggingface-hub==0.30.0
